@@ -27,13 +27,10 @@ package com.questhelper.helpers.quests.theknightssword;
 import com.questhelper.collections.ItemCollections;
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
-import com.questhelper.requirements.ComplexRequirement;
 import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.NpcCondition;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.npc.NpcRequirement;
 import com.questhelper.requirements.player.SkillRequirement;
-import com.questhelper.requirements.util.LogicType;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ExperienceReward;
@@ -43,89 +40,67 @@ import com.questhelper.steps.ConditionalStep;
 import com.questhelper.steps.NpcStep;
 import com.questhelper.steps.ObjectStep;
 import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 
-import java.util.*;
-
+// TODO: fix typo in Sir Vyvin's name
 public class TheKnightsSword extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement pickaxe, redberryPie, ironBars, bluriteOre, bluriteSword, portrait;
+	// Required items
+	ItemRequirement redberryPie;
+	ItemRequirement ironBars;
+	ItemRequirement bluriteOre;
+	ItemRequirement pickaxe;
 
-	//Items Recommended
-	ItemRequirement varrockTeleport, faladorTeleports, homeTele;
-	ComplexRequirement searchCupboardReq;
+	// Recommended items
+	ItemRequirement varrockTeleport;
+	ItemRequirement faladorTeleports;
+	ItemRequirement homeTele;
 
-	Requirement inDungeon, inFaladorCastle1, inFaladorCastle2, inFaladorCastle2Bedroom, sirVyinNotInRoom;
+	// Mid-quest item requirements
+	ItemRequirement bluriteSword;
+	ItemRequirement portrait;
 
-	QuestStep talkToSquire, talkToReldo, talkToThurgo, talkToThurgoAgain, talkToSquire2, goUpCastle1, goUpCastle2, searchCupboard, enterDungeon,
-		mineBlurite, givePortraitToThurgo, bringThurgoOre, finishQuest;
+	// Zones
+	Zone dungeon;
+	Zone faladorCastle1;
+	Zone faladorCastle2;
+	Zone faladorCastle2Bedroom;
 
-	//Zones
-	Zone dungeon, faladorCastle1, faladorCastle2, faladorCastle2Bedroom;
+	// Miscellaneous requirements
+	NpcRequirement sirVyvinNotInRoom;
+	ZoneRequirement inDungeon;
+	ZoneRequirement inFaladorCastle1;
+	ZoneRequirement inFaladorCastle2;
+	ZoneRequirement inFaladorCastle2Bedroom;
 
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
+	// Steps
+	NpcStep talkToSquire;
 
-		steps.put(0, talkToSquire);
-		steps.put(1, talkToReldo);
-		steps.put(2, talkToThurgo);
-		steps.put(3, talkToThurgoAgain);
-		steps.put(4, talkToSquire2);
+	NpcStep talkToReldo;
 
-		ConditionalStep getPortrait = new ConditionalStep(this, goUpCastle1);
-		getPortrait.addStep(portrait.alsoCheckBank(), givePortraitToThurgo);
-		getPortrait.addStep(inFaladorCastle2, searchCupboard);
-		getPortrait.addStep(inFaladorCastle1, goUpCastle2);
+	NpcStep talkToThurgo;
 
-		steps.put(5, getPortrait);
+	NpcStep talkToThurgoAgain;
 
-		ConditionalStep returnSwordToSquire = new ConditionalStep(this, enterDungeon);
-		returnSwordToSquire.addStep(bluriteSword.alsoCheckBank(), finishQuest);
-		returnSwordToSquire.addStep(bluriteOre.alsoCheckBank(), bringThurgoOre);
-		returnSwordToSquire.addStep(inDungeon, mineBlurite);
+	NpcStep talkToSquire2;
 
-		steps.put(6, returnSwordToSquire);
+	ObjectStep goUpCastle1;
+	ObjectStep goUpCastle2;
+	ObjectStep searchCupboard;
+	NpcStep givePortraitToThurgo;
 
-		return steps;
-	}
-
-	@Override
-	protected void setupRequirements()
-	{
-		redberryPie = new ItemRequirement("Redberry pie", ItemID.REDBERRY_PIE);
-		ironBars = new ItemRequirement("Iron bar", ItemID.IRON_BAR, 2);
-		bluriteOre = new ItemRequirement("Blurite ore", ItemID.BLURITE_ORE);
-		bluriteSword = new ItemRequirement("Blurite sword", ItemID.FALADIAN_SWORD);
-		pickaxe = new ItemRequirement("Any pickaxe", ItemCollections.PICKAXES).isNotConsumed();
-		varrockTeleport = new ItemRequirement("A teleport to Varrock", ItemID.POH_TABLET_VARROCKTELEPORT);
-		faladorTeleports = new ItemRequirement("Teleports to Falador", ItemID.POH_TABLET_FALADORTELEPORT, 4);
-		homeTele = new ItemRequirement("A teleport near Mudskipper Point, such as POH teleport or Fairy Ring to AIQ",
-			ItemID.NZONE_TELETAB_RIMMINGTON, 2);
-		portrait = new ItemRequirement("Portrait", ItemID.KNIGHTS_PORTRAIT);
-	}
-
-	public void setupConditions()
-	{
-		inDungeon = new ZoneRequirement(dungeon);
-		inFaladorCastle1 = new ZoneRequirement(faladorCastle1);
-		inFaladorCastle2 = new ZoneRequirement(faladorCastle2);
-		inFaladorCastle2Bedroom = new ZoneRequirement(faladorCastle2Bedroom);
-		sirVyinNotInRoom = new NpcCondition(NpcID.SIR_VYVIN, faladorCastle2Bedroom);
-
-		NpcRequirement sirVyinNotInRoom = new NpcRequirement("Sir Vyin not in the bedroom.", NpcID.SIR_VYVIN, true, faladorCastle2Bedroom);
-		ZoneRequirement playerIsUpstairs = new ZoneRequirement("Upstairs", faladorCastle2);
-		searchCupboardReq = new ComplexRequirement(LogicType.AND, "Sir Vyin not in the bedroom.", playerIsUpstairs, sirVyinNotInRoom);
-	}
+	ObjectStep enterDungeon;
+	ObjectStep mineBlurite;
+	NpcStep bringThurgoOre;
+	NpcStep finishQuest;
 
 	@Override
 	protected void setupZones()
@@ -136,66 +111,148 @@ public class TheKnightsSword extends BasicQuestHelper
 		faladorCastle2Bedroom = new Zone(new WorldPoint(2981, 3336, 2), new WorldPoint(2986, 3331, 2));
 	}
 
+	@Override
+	protected void setupRequirements()
+	{
+		redberryPie = new ItemRequirement("Redberry pie", ItemID.REDBERRY_PIE);
+		redberryPie.setTooltip("Purchasable from the grand exchange, or for ironmen: 10 cooking to cook one, or 32 cooking and a chef's hat to buy one from the Cooks' Guild.");
+		ironBars = new ItemRequirement("Iron bar", ItemID.IRON_BAR, 2);
+		bluriteOre = new ItemRequirement("Blurite ore", ItemID.BLURITE_ORE);
+		pickaxe = new ItemRequirement("Any pickaxe", ItemCollections.PICKAXES).isNotConsumed();
+
+		varrockTeleport = new ItemRequirement("A teleport to Varrock", ItemID.POH_TABLET_VARROCKTELEPORT);
+		faladorTeleports = new ItemRequirement("Teleports to Falador", ItemID.POH_TABLET_FALADORTELEPORT, 3);
+		homeTele = new ItemRequirement("A teleport near Mudskipper Point, such as POH teleport or Fairy Ring to AIQ", ItemID.NZONE_TELETAB_RIMMINGTON, 2);
+
+		bluriteSword = new ItemRequirement("Blurite sword", ItemID.FALADIAN_SWORD);
+		portrait = new ItemRequirement("Portrait", ItemID.KNIGHTS_PORTRAIT);
+
+		inDungeon = new ZoneRequirement(dungeon);
+		inFaladorCastle1 = new ZoneRequirement(faladorCastle1);
+		inFaladorCastle2 = new ZoneRequirement(faladorCastle2);
+		inFaladorCastle2Bedroom = new ZoneRequirement(faladorCastle2Bedroom);
+
+		sirVyvinNotInRoom = new NpcRequirement("Sir Vyvin not in the bedroom.", NpcID.SIR_VYVIN, true, faladorCastle2Bedroom);
+	}
+
 	public void setupSteps()
 	{
 		talkToSquire = new NpcStep(this, NpcID.SQUIRE, new WorldPoint(2978, 3341, 0), "Talk to the Squire in Falador Castle's courtyard.");
 		talkToSquire.addDialogStep("And how is life as a squire?");
 		talkToSquire.addDialogStep("I can make a new sword if you like...");
 		talkToSquire.addDialogStep("So would these dwarves make another one?");
-		talkToSquire.addDialogStep("Ok, I'll give it a go.");
 		talkToSquire.addDialogStep("Yes.");
+		talkToSquire.addTeleport(faladorTeleports.quantity(1));
+
 		talkToReldo = new NpcStep(this, NpcID.RELDO_NORMAL, new WorldPoint(3211, 3494, 0), "Talk to Reldo in Varrock Castle's library.");
 		talkToReldo.addDialogStep("What do you know about the Imcando dwarves?");
+		talkToReldo.addTeleport(varrockTeleport.quantity(1));
+
 		talkToThurgo = new NpcStep(this, NpcID.THURGO, new WorldPoint(3000, 3145, 0), "Talk to Thurgo south of Port Sarim and give him a redberry pie.", redberryPie);
 		talkToThurgo.addDialogStep("Would you like a redberry pie?");
+		talkToThurgo.addTeleport(homeTele.quantity(1));
+
 		talkToThurgoAgain = new NpcStep(this, NpcID.THURGO, new WorldPoint(3000, 3145, 0), "Talk to Thurgo again.");
 		talkToThurgoAgain.addDialogStep("Can you make a special sword for me?");
+
 		talkToSquire2 = new NpcStep(this, NpcID.SQUIRE, new WorldPoint(2978, 3341, 0), "Talk to the Squire in Falador Castle's courtyard.");
+		talkToSquire2.addTeleport(faladorTeleports.quantity(1));
+
 		goUpCastle1 = new ObjectStep(this, ObjectID.FAI_FALADOR_CASTLE_LADDER_UP, new WorldPoint(2994, 3341, 0), "Climb up the east ladder in Falador Castle.");
+
 		goUpCastle2 = new ObjectStep(this, ObjectID.FAI_FALADOR_CASTLE_STAIRS, new WorldPoint(2985, 3338, 1), "Go up the staircase west of the ladder on the 1st floor.");
-		searchCupboard = new ObjectStep(this, ObjectID.VYVINCUPBOARDOPEN, new WorldPoint(2985, 3336, 2), "Search the cupboard in the room south of the staircase. You'll need Sir Vyvin to be in the other room.", searchCupboardReq);
-		((ObjectStep)searchCupboard).addAlternateObjects(ObjectID.VYVINCUPBOARDSHUT); // 2271 is the closed cupboard
-		givePortraitToThurgo = new NpcStep(this, NpcID.THURGO, new WorldPoint(3000, 3145, 0), "Bring Thurgo the portrait.", ironBars, portrait);
+
+		searchCupboard = new ObjectStep(this, ObjectID.VYVINCUPBOARDOPEN, new WorldPoint(2985, 3336, 2), "Search the cupboard in the room south of the staircase. You'll need Sir Vyvin to be in the other room.", sirVyvinNotInRoom);
+		searchCupboard.addAlternateObjects(ObjectID.VYVINCUPBOARDSHUT);
+
+		givePortraitToThurgo = new NpcStep(this, NpcID.THURGO, new WorldPoint(3000, 3145, 0), "Bring Thurgo the portrait.", pickaxe, ironBars, portrait);
 		givePortraitToThurgo.addDialogStep("About that sword...");
+		givePortraitToThurgo.addTeleport(homeTele.quantity(1));
+
 		enterDungeon = new ObjectStep(this, ObjectID.FAI_TRAPDOOR, new WorldPoint(3008, 3150, 0), "Go down the ladder south of Port Sarim. Be prepared for ice giants and ice warriors to attack you.", pickaxe, ironBars);
+
 		mineBlurite = new ObjectStep(this, ObjectID.BLURITE_ROCK_1, new WorldPoint(3049, 9566, 0), "Mine a blurite ore in the eastern cavern.", pickaxe);
+
 		bringThurgoOre = new NpcStep(this, NpcID.THURGO, new WorldPoint(3000, 3145, 0), "Return to Thurgo with a blurite ore and two iron bars.", bluriteOre, ironBars);
 		bringThurgoOre.addDialogStep("Can you make that replacement sword now?");
+
 		finishQuest = new NpcStep(this, NpcID.SQUIRE, new WorldPoint(2978, 3341, 0), "Return to the Squire with the sword to finish the quest.", bluriteSword);
+		finishQuest.addTeleport(faladorTeleports.quantity(1));
 	}
 
 	@Override
-	public List<ItemRequirement> getItemRequirements()
+	public Map<Integer, QuestStep> loadSteps()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(redberryPie);
-		reqs.add(ironBars);
-		reqs.add(pickaxe);
-		return reqs;
-	}
+		initializeRequirements();
+		setupSteps();
 
-	@Override
-	public List<ItemRequirement> getItemRecommended()
-	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(varrockTeleport);
-		reqs.add(faladorTeleports);
-		reqs.add(homeTele);
-		return reqs;
-	}
+		var steps = new HashMap<Integer, QuestStep>();
 
-	@Override
-	public List<String> getCombatRequirements()
-	{
-		ArrayList<String> reqs = new ArrayList<>();
-		reqs.add("Able to survive attacks from Ice Warriors (level 57) and Ice Giants (level 53)");
-		return reqs;
+		steps.put(0, talkToSquire);
+		steps.put(1, talkToReldo);
+		steps.put(2, talkToThurgo);
+		steps.put(3, talkToThurgoAgain);
+		steps.put(4, talkToSquire2);
+
+		var getPortrait = new ConditionalStep(this, goUpCastle1);
+		getPortrait.addStep(portrait.alsoCheckBank(), givePortraitToThurgo);
+		getPortrait.addStep(inFaladorCastle2, searchCupboard);
+		getPortrait.addStep(inFaladorCastle1, goUpCastle2);
+
+		steps.put(5, getPortrait);
+
+		var returnSwordToSquire = new ConditionalStep(this, enterDungeon);
+		returnSwordToSquire.addStep(bluriteSword.alsoCheckBank(), finishQuest);
+		returnSwordToSquire.addStep(bluriteOre.alsoCheckBank(), bringThurgoOre);
+		returnSwordToSquire.addStep(inDungeon, mineBlurite);
+
+		steps.put(6, returnSwordToSquire);
+
+		return steps;
 	}
 
 	@Override
 	public List<Requirement> getGeneralRequirements()
 	{
-		return Collections.singletonList(new SkillRequirement(Skill.MINING, 10, true));
+		return List.of(
+			new SkillRequirement(Skill.MINING, 10, true)
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRequirements()
+	{
+		return List.of(
+			redberryPie,
+			ironBars,
+			pickaxe
+		);
+	}
+
+	@Override
+	public List<ItemRequirement> getItemRecommended()
+	{
+		return List.of(
+			varrockTeleport,
+			faladorTeleports,
+			homeTele
+		);
+	}
+
+	@Override
+	public List<String> getCombatRequirements()
+	{
+		return List.of(
+			"Able to survive attacks from Ice Warriors (level 57) and Ice Giants (level 53)"
+		);
+	}
+
+	@Override
+	public List<String> getNotes()
+	{
+		return List.of(
+			"You can make progress towards the Falador Easy Diary task by mining an additional Blurite ore and smelting another Blurite bar, it will be required for smithing Blurite limbs."
+		);
 	}
 
 	@Override
@@ -207,33 +264,57 @@ public class TheKnightsSword extends BasicQuestHelper
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Collections.singletonList(new ExperienceReward(Skill.SMITHING, 12725));
+		return List.of(
+			new ExperienceReward(Skill.SMITHING, 12725)
+		);
 	}
 
 	@Override
 	public List<UnlockReward> getUnlockRewards()
 	{
-		return Arrays.asList(
-				new UnlockReward("The ability to smelt Blurite ore."),
-				new UnlockReward("The ability to smith Blurite bars."));
+		return List.of(
+			new UnlockReward("The ability to smelt Blurite ore."),
+			new UnlockReward("The ability to smith Blurite bars.")
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var sections = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Starting off", Arrays.asList(talkToSquire, talkToReldo)));
-		allSteps.add(new PanelDetails("Finding an Imcando", Arrays.asList(talkToThurgo, talkToThurgoAgain), redberryPie));
-		allSteps.add(new PanelDetails("Find the portrait", Arrays.asList(talkToSquire2, goUpCastle1, goUpCastle2, searchCupboard, givePortraitToThurgo)));
-		allSteps.add(new PanelDetails("Making the sword", Arrays.asList(enterDungeon, mineBlurite, bringThurgoOre), pickaxe, ironBars));
-		allSteps.add(new PanelDetails("Return the sword", Collections.singletonList(finishQuest)));
-		return allSteps;
-	}
+		sections.add(new PanelDetails("Starting off", List.of(
+			talkToSquire,
+			talkToReldo
+		)));
 
-	@Override
-	public List<String> getNotes()
-	{
-		return Collections.singletonList("You can make progress towards the Falador Easy Diary task by mining an additional Blurite ore and smelting another Blurite bar, it will be required for smithing Blurite limbs.");
+		sections.add(new PanelDetails("Finding an Imcando", List.of(
+			talkToThurgo,
+			talkToThurgoAgain
+		), List.of(
+			redberryPie
+		)));
+
+		sections.add(new PanelDetails("Find the portrait", List.of(
+			talkToSquire2,
+			goUpCastle1,
+			goUpCastle2,
+			searchCupboard,
+			givePortraitToThurgo
+		)));
+
+		sections.add(new PanelDetails("Making the sword", List.of(enterDungeon,
+			mineBlurite,
+			bringThurgoOre
+		), List.of(
+			pickaxe,
+			ironBars
+		)));
+
+		sections.add(new PanelDetails("Return the sword", List.of(
+			finishQuest
+		)));
+
+		return sections;
 	}
 }
